==> GitGriever/Game/Keil_v5/ARM/Flash/ATSAM4/FlashPrg.c <==
#include "..\FlashOS.H"                          /* FlashOS Structures */
#define PMC_CKGR_MOSCXTEN     (0x01   <<  0)     /* MOSCXTEN: Main Crystal Oscillator Enable             */
#define PMC_CKGR_MOSCRCEN     (0x01   <<  3)     /* MOSCRCEN: Main On-Chip RC Oscillator Enable          */
#define PMC_CKGR_MOSCRCF      (0x07   <<  4)     /* MOSCRCF:  Main On-Chip RC Oscillator Freq. Selection */
#define PMC_CKGR_MOSCRCF_12   (0x02   <<  4)     /* MOSCRCF:  The Fast RC Oscillator Freq. is at 12 MHz  */
#define PMC_CKGR_MOSCXTST     (0x0F   <<  8)     /* MOSCXTST: Main Crystal Oscillator Start-up Time (15) */
#define PMC_CKGR_CKGR_KEY     (0x37   << 16)     /* KEY: Password                                        */
#define PMC_CKGR_MOSCSEL      (0x01   << 24)     /* MOSCSEL: Main Oscillator Selection                   */
#define PMC_MCKR_CSS          (0x03   <<  0)     /* CSS: Master Clock Source Selection */
#define PMC_MCKR_CSS_MAIN_CLK (0x01   <<  0)     /* Main Clock is selected             */
#define PMC_MCKR_PRES         (0x07   <<  4)     /* PRES: Processor Clock Prescaler    */
#define PMC_MCKR_PRES_1       (0x01   <<  4)     /* PRES: Processor Clock Prescaler    */
#define PMC_SR_MOSCXTS        (0x01   <<  0)     /* MOSCXTS:  Main XTAL Oscillator Status       */
#define PMC_SR_MCKRDY         (0x01   <<  3)     /* MCKRDY:   Master Clock  Status              */
#define PMC_SR_MOSCSELS       (0x01   << 16)     /* MOSCSELS: Main Oscillator Selection Status  */

int Init (unsigned long adr, unsigned long clk, unsigned long fnc) {

  /* store Flash Start address */
  base_adr = adr;

  /* set Flash Waite State to maximum */
  EEFC0->FMR = EEFC_FMR_FWS;
#if defined EEFC1_BASE
  EEFC1->FMR = EEFC_FMR_FWS;
#endif

  /* disable Watchdog */
  WDT->MR   = WDT_MR_WDDIS;

  /* disable PMC write protection */
  PMC->PMC_WPMR = PMC_WPMR_WPKEY;

  /* before we change the clocksetup we switch Master Clock Source
     to MAIN_CLK and set prescaler to one
   */
  PMC->PMC_MCKR = (PMC->PMC_MCKR & ~PMC_MCKR_CSS) | PMC_MCKR_CSS_MAIN_CLK;
  while (!(PMC->PMC_SR & PMC_SR_MCKRDY));     /* Wait for MCKRDY                   */

  PMC->PMC_MCKR = (PMC->PMC_MCKR & ~PMC_MCKR_PRES);
  while (!(PMC->PMC_SR & PMC_SR_MCKRDY));     /* Wait for MCKRDY                   */

  /* we use the internal fast oscillator.
     in the long term all the algorithms should be changed that the internal
     oscillator instead the external oscillator is used for all SAM4 families */

  PMC->CKGR_MOR = (PMC->CKGR_MOR                   ) | PMC_CKGR_CKGR_KEY | PMC_CKGR_MOSCRCEN;
  while (!(PMC->PMC_SR & PMC_SR_MOSCRCS));    /* Wait for MOSCRCS                   */

  PMC->CKGR_MOR = (PMC->CKGR_MOR & ~PMC_CKGR_MOSCRCF) | PMC_CKGR_CKGR_KEY | PMC_CKGR_MOSCRCF_12 ;

  PMC->CKGR_MOR = (PMC->CKGR_MOR & ~PMC_CKGR_MOSCSEL) | PMC_CKGR_CKGR_KEY;
  while (!(PMC->PMC_SR & PMC_SR_MOSCSELS));   /* Wait for MOSCSELS                  */

#if 0
  /* Enable the Main Oscillator:
     SCK Period = 1/32768 = 30.51 us
     Start-up Time = 8 * 15 / SCK = 120 * 30.51us = 3.6612 ms */
  PMC->CKGR_MOR = (PMC_CKGR_MOSCSEL | PMC_CKGR_CKGR_KEY | PMC_CKGR_MOSCXTST | PMC_CKGR_MOSCXTEN);

  /* Wait the Start-up Time */
  while(!(PMC->PMC_SR & PMC_SR_MOSCXTS));
#endif

  /* Select Main Clock (CSS field) */
  PMC->PMC_MCKR = (PMC->PMC_MCKR & ~PMC_MCKR_CSS) | PMC_MCKR_CSS_MAIN_CLK;

  /* Wait for Clock ready */
  while (!(PMC->PMC_SR & PMC_SR_MCKRDY));

  /* Select Main Clock */
  PMC->PMC_MCKR = PMC_MCKR_CSS_MAIN_CLK;

  /* Wait for Clock ready */
  while (!(PMC->PMC_SR & PMC_SR_MCKRDY));

  /* enable PMC write protection */
  PMC->PMC_WPMR = PMC_WPMR_WPKEY | PMC_WPMR_WPEN;

  return (0);
}

int UnInit (unsigned long fnc) {
#ifdef FLASH_MEM
  u32           frr;
  u32           fcr;

  /* after programming Flash  set GPNVMBit to boot from Flash */
  if (fnc == 2) {

    /* read current GPNVM bits */
    EEFC0->FCR = EEFC_FCR_FKEY | EEFC_FCR_FCMD_GGPB;
    while (!(EEFC0->FSR & EEFC_FSR_FRDY));
    frr = EEFC0->FRR;

    /* configure GPNVM bit #1 :  1 = Boot from Flash  */
    if ((frr & (1 << GPNVM_BIT1)) == 0) {
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT1 << 8) | EEFC_FCR_FCMD_SGPB;

      EEFC0->FCR = fcr;                           /* Write the Command */
      while (!(EEFC0->FSR & EEFC_FSR_FRDY));      /* Wait until the end of Command */
      if ((EEFC0->FSR & EEFC_FSR_FLERR) == EEFC_FSR_FLERR) {
        EEFC0->FCR = fcr;                         /* reWrite the Command */
        while (!(EEFC0->FSR & EEFC_FSR_FRDY));    /* Wait until the end of Command */
      }
    }

//#if defined FLASH_BANK_SELECTION
    /* configure GPNVM bit #2 : Flash selection      0 = Boot from Flash 0 */
    if ((frr & (1 << GPNVM_BIT2)) != 0) {
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT2 << 8) | EEFC_FCR_FCMD_CGPB;

      EEFC0->FCR = fcr;                           /* Write the Command */
      while (!(EEFC0->FSR & EEFC_FSR_FRDY));      /* Wait until the end of Command */
      if ((EEFC0->FSR & EEFC_FSR_FLERR) == EEFC_FSR_FLERR) {
        EEFC0->FCR = fcr;                         /* reWrite the Command */
        while (!(EEFC0->FSR & EEFC_FSR_FRDY));    /* Wait until the end of Command */
      }
    }
//#endif

  }
#endif

  return (0);
}

int EraseChip (void) {
#ifdef FLASH_MEM

  /* erase all command
     memory covered by the Flash Programming Algorithm is erased */

  EEFC0->FCR  = EEFC_FCR_FKEY | EEFC_FCR_FCMD_EA;
  while (!(EEFC0->FSR  & EEFC_FSR_FRDY));

#if defined ATSAM4SD_1024 || defined ATSAM4SD_2048 || defined ATSAM4SP_2048 || defined ATSAM4C32_2048
  EEFC1->FCR  = EEFC_FCR_FKEY | EEFC_FCR_FCMD_EA;
  while (!(EEFC1->FSR  & EEFC_FSR_FRDY));
#endif

#endif

  return (0);
}

int EraseSector (unsigned long adr) {
  u32           page;
  EEFC_TypeDef *EEFCx;

  /* Note:
           For SAM3S16, SAM4S Erase and write Command (EWP) does not work on all Flash pages.
           Only for pages in the first 2 Small Sector, 16K Bytes.
           We select a "sector size" of 8K which works for Unlock and Erase Page (16 pages)
   */

  /* select EEFC, calculate page */
#if defined ATSAM4S_128 || defined ATSAM4S_256  || defined ATSAM4S_512 || defined ATSAM4S_1024 || \
    defined ATSAM4E_512 || defined ATSAM4E_1024 || \
    defined ATSAM4C_256 || defined ATSAM4C_512  || defined ATSAM4C_1024 || \
    defined ATSAM4N_256 || defined ATSAM4N_512  || defined ATSAM4N_1024
    EEFCx =  EEFC0;
    page  = (adr - (base_adr                   )) / FLASH_PAGE_SIZE;
#endif

#if defined ATSAM4SD_1024 || defined ATSAM4SD_2048 || defined ATSAM4SP_2048 || defined ATSAM4C32_2048
  if (adr < (base_adr + (FLASH_SIZE / 2))) {
    EEFCx =  EEFC0;
    page  = (adr - (base_adr                   )) / FLASH_PAGE_SIZE;
  }
  else {
    EEFCx =  EEFC1;
    page  = (adr - (base_adr + (FLASH_SIZE / 2))) / FLASH_PAGE_SIZE;
  }
#endif

  /* FARG[1:0] Number of pages to be erased with EPA command */
  page = ((page & ~3UL) | 2);

  /* unlock page command */
  EEFCx->FCR = EEFC_FCR_FKEY | EEFC_FCR_FCMD_CLB | (EEFC_FCR_FARG & (page << 8));
  while (!(EEFCx->FSR & EEFC_FSR_FRDY));

  /* Erase page command (Erase page on 16 pages) */
  EEFCx->FCR = EEFC_FCR_FKEY | EEFC_FCR_FCMD_EPA | (EEFC_FCR_FARG & (page << 8));
  while (!(EEFCx->FSR & EEFC_FSR_FRDY));

  /* check for errors */
  if (EEFCx->FSR & (EEFC_FSR_FLERR |EEFC_FSR_FCMDE | EEFC_FSR_FLOCKE))
    return (1);

  return (0);
}

int ProgramPage (unsigned long adr, unsigned long sz, unsigned char *buf) {
  u32           page;
  u32          *Flash;
  EEFC_TypeDef *EEFCx;

  /* select EEFC, calculate page */
#if defined ATSAM4S_128 || defined ATSAM4S_256  || defined ATSAM4S_512 || defined ATSAM4S_1024 || \
    defined ATSAM4E_512 || defined ATSAM4E_1024 || \
    defined ATSAM4C_256 || defined ATSAM4C_512  || defined ATSAM4C_1024 || \
    defined ATSAM4N_256 || defined ATSAM4N_512  || defined ATSAM4N_1024
    EEFCx =  EEFC0;
    page  = (adr - (base_adr                   )) / FLASH_PAGE_SIZE;
#endif

#if defined ATSAM4SD_1024 || defined ATSAM4SD_2048 || defined ATSAM4SP_2048 || defined ATSAM4C32_2048
  if (adr < (base_adr + (FLASH_SIZE / 2))) {
    EEFCx =  EEFC0;
    page  = (adr - (base_adr                   )) / FLASH_PAGE_SIZE;
  }
  else {
    EEFCx =  EEFC1;
    page  = (adr - (base_adr + (FLASH_SIZE / 2))) / FLASH_PAGE_SIZE;
  }
#endif

  /* set write pointer to Flash address */
  Flash = (unsigned long *)adr;

  /* copy data to write buffer */
  for (sz = (sz + 3) & ~3; sz; sz -= 4, buf += 4) {
    *Flash++ = *((unsigned long *)buf);
  }

  /* start programming command */
  EEFCx->FCR = EEFC_FCR_FKEY | EEFC_FCR_FCMD_WP | (EEFC_FCR_FARG & (page << 8));
  while (!(EEFCx->FSR & EEFC_FSR_FRDY));

  /* check for errors */
  if (EEFCx->FSR & (EEFC_FSR_FLERR |EEFC_FSR_FCMDE | EEFC_FSR_FLOCKE))
    return (1);

  return (0);
}

int ProgramPage (unsigned long adr, unsigned long sz, unsigned char *buf) {
  u32           frr;
  u32           fcr;
  u8            gpnvm;

  gpnvm = *buf;

  /* read current GPNVM bits */
  EEFC0->FCR = EEFC_FCR_FKEY | EEFC_FCR_FCMD_GGPB;
  while (!(EEFC0->FSR & EEFC_FSR_FRDY));
  frr = EEFC0->FRR;

  /* configure GPNVM bit #0 : Security bit */
  if ((gpnvm & (1 << GPNVM_BIT0)) != (frr & (1 << GPNVM_BIT0))) {
    if (gpnvm & (1 << GPNVM_BIT0))
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT0 << 8) | EEFC_FCR_FCMD_SGPB;
    else
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT0 << 8) | EEFC_FCR_FCMD_CGPB;

    EEFC0->FCR = fcr;                           /* Write the Command */
    while (!(EEFC0->FSR & EEFC_FSR_FRDY));      /* Wait until the end of Command */
    if ((EEFC0->FSR & EEFC_FSR_FLERR) == EEFC_FSR_FLERR) {
      EEFC0->FCR = fcr;                         /* Write the Command */
      while (!(EEFC0->FSR & EEFC_FSR_FRDY));    /* Wait until the end of Command */
    }
  }

  /* configure GPNVM bit #1 : Boot mode selection  0 = Boot from ROM,    1 = Boot from Flash  */
  if ((gpnvm & (1 << GPNVM_BIT1)) != (frr & (1 << GPNVM_BIT1))) {
    if (gpnvm & (1 << GPNVM_BIT1))
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT1 << 8) | EEFC_FCR_FCMD_SGPB;
    else
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT1 << 8) | EEFC_FCR_FCMD_CGPB;

    EEFC0->FCR = fcr;                           /* Write the Command */
    while (!(EEFC0->FSR & EEFC_FSR_FRDY));      /* Wait until the end of Command */
    if ((EEFC0->FSR & EEFC_FSR_FLERR) == EEFC_FSR_FLERR) {
      EEFC0->FCR = fcr;                         /* Write the Command */
      while (!(EEFC0->FSR & EEFC_FSR_FRDY));    /* Wait until the end of Command */
    }
  }

  /* configure GPNVM bit #2 : Flash selection      0 = Boot from Flash0, 1 = Boot from Flash1 */
  if ((gpnvm & (1 << GPNVM_BIT2)) != (frr & (1 << GPNVM_BIT2))) {
    if (gpnvm & (1 << GPNVM_BIT2))
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT2 << 8) | EEFC_FCR_FCMD_SGPB;
    else
      fcr = EEFC_FCR_FKEY | (GPNVM_BIT2 << 8) | EEFC_FCR_FCMD_CGPB;

    
    EEFC0->FCR = fcr;                           /* Write the Command */
    while (!(EEFC0->FSR & EEFC_FSR_FRDY));      /* Wait until the end of Command */
    if ((EEFC0->FSR & EEFC_FSR_FLERR) == EEFC_FSR_FLERR) {
      EEFC0->FCR = fcr;                         /* Write the Command */
      while (!(EEFC0->FSR & EEFC_FSR_FRDY));    /* Wait until the end of Command */
    }
}

  return (0);
}
