==> GitGriever/Game/Keil_v5/ARM/Flash/STM32W108xx/FlashPrg.c <==
#include "..\FlashOS.H"        // FlashOS Structures
#define M8(adr)  (*((vu8  *) (adr)))
#define M16(adr) (*((vu16 *) (adr)))
#define FPEC_BASE         0x40004000
#define FLASH_BASE        0x40008000
#define FLASH_OPT_BASE    0x08040800            // start address of the option bytes
#define FPEC            ((FPEC_TypeDef *) FPEC_BASE)
#define FLASH           ((FLASH_TypeDef*) FLASH_BASE)
#define RDPRT_KEY          0x00A5
#define FLASH_KEY1         0x45670123
#define FLASH_KEY2         0xCDEF89AB
#define FLASH_PG           (1UL << 0)
#define FLASH_PER          (1UL << 1)
#define FLASH_MER          (1UL << 2)
#define FLASH_OPTPG        (1UL << 4)
#define FLASH_OPTER        (1UL << 5)
#define FLASH_STRT         (1UL << 6)
#define FLASH_LOCK         (1UL << 7)
#define FLASH_OPTWRE       (1UL << 9)
#define FLASH_BSY          (1UL << 0)
#define FLASH_PGERR        (1UL << 2)
#define FLASH_WRPRTERR     (1UL << 4)
#define FLASH_EOP          (1UL << 5)

int Init (unsigned long adr, unsigned long clk, unsigned long fnc) {

  // Unlock Flash    
  FLASH->KEYR  = FLASH_KEY1;
  FLASH->KEYR  = FLASH_KEY2;

  // Zero Wait State
  FLASH->ACR  = 0x00000000;
  
  FPEC->CLKER = (1UL << 0);                // enable FPEC_CLK

  return (0);
}

int Init (unsigned long adr, unsigned long clk, unsigned long fnc) {

  // Unlock Flash    
  FLASH->KEYR = FLASH_KEY1;
  FLASH->KEYR = FLASH_KEY2;

  // Unlock Option Bytes
  FLASH->OPTKEYR = FLASH_KEY1;
  FLASH->OPTKEYR = FLASH_KEY2;

  // Zero Wait State
  FLASH->ACR  = 0x00000000;
  
  FPEC->CLKER = (1UL << 0);                // enable FPEC_CLK

  return (0);
}

int UnInit (unsigned long fnc) {

  // Lock Flash
  FLASH->CR  |=  FLASH_LOCK;

  FPEC->CLKER = (0UL << 0);                // disable FPEC_CLK

  return (0);
}

int UnInit (unsigned long fnc) {

  // Lock Flash & Option Bytes
  FLASH->CR &= ~FLASH_OPTWRE;
  FLASH->CR |=  FLASH_LOCK;

  FPEC->CLKER = (0UL << 0);                // disable FPEC_CLK

  return (0);
}

int EraseChip (void) {

  FLASH->CR  |=  FLASH_MER;                     // Mass Erase Enabled
  FLASH->CR  |=  FLASH_STRT;                    // Start Erase

  while (FLASH->SR  & FLASH_BSY) {
    __nop();                                    // do nothing
  }

  FLASH->CR  &= ~FLASH_MER;                     // Mass Erase Disabled

  return (0);                                   // Done
}

int EraseChip (void) {

  FLASH->CR |=  FLASH_OPTER;                    // Option Byte Erase Enabled 
  FLASH->CR |=  FLASH_STRT;                     // Start Erase

  while (FLASH->SR & FLASH_BSY) {
    __nop();                                    // do nothing
  }

  FLASH->CR &= ~FLASH_OPTER;                    // Option Byte Erase Disabled 

  // Unprotect Flash

  FLASH->CR |=  FLASH_OPTPG;                    // Option Byte Programming Enabled

  M16(FLASH_OPT_BASE) = RDPRT_KEY;              // Program Half Word: RDPRT Key
  while (FLASH->SR & FLASH_BSY) {
    __nop();                                    // do nothing
  }

  FLASH->CR &= ~FLASH_OPTPG;                    // Option Byte Programming Disabled

  // Check for Errors
  if (FLASH->SR & (FLASH_PGERR | FLASH_WRPRTERR)) {
    FLASH->SR |= FLASH_PGERR | FLASH_WRPRTERR;
    return (1);                                 // Failed
  }

  return (0);                                   // Done
}

int EraseSector (unsigned long adr) {

  FLASH->CR  |=  FLASH_PER;                     // Page Erase Enabled 
  FLASH->AR   =  adr;                           // Page Address
  FLASH->CR  |=  FLASH_STRT;                    // Start Erase

  while (FLASH->SR  & FLASH_BSY) {
    __nop();                                    // do nothing
  }

  FLASH->CR  &= ~FLASH_PER;                     // Page Erase Disabled 

  return (0);                                   // Done
}

int EraseSector (unsigned long adr) {

  FLASH->CR |=  FLASH_OPTER;                    // Option Byte Erase Enabled 
  FLASH->CR |=  FLASH_STRT;                     // Start Erase

  while (FLASH->SR & FLASH_BSY) {
    __nop();                                    // do nothing
  }

  FLASH->CR &= ~FLASH_OPTER;                    // Option Byte Erase Disabled 

  return (0);                                   // Done
}

int ProgramPage (unsigned long adr, unsigned long sz, unsigned char *buf) {

  sz = (sz + 1) & ~1;                           // Adjust size for Half Words
  
  while (sz) {

    FLASH->CR  |=  FLASH_PG;                    // Programming Enabled

    M16(adr) = *((unsigned short *)buf);        // Program Half Word
    while (FLASH->SR & FLASH_BSY) {
      __nop();                                  // do nothing
    }

    FLASH->CR  &= ~FLASH_PG;                    // Programming Disabled

    // Check for Errors
    if (FLASH->SR  & (FLASH_PGERR | FLASH_WRPRTERR)) {
      FLASH->SR  |= FLASH_PGERR | FLASH_WRPRTERR;
      return (1);                               // Failed
    }

    // Go to next Half Word
    adr += 2;
    buf += 2;
    sz  -= 2;
  }

  return (0);                                   // Done
}

int ProgramPage (unsigned long adr, unsigned long sz, unsigned char *buf) {

  sz = (sz + 1) & ~1;                           // Adjust size for Half Words
  
  while (sz) {

    FLASH->CR |=  FLASH_OPTPG;                  // Option Byte Programming Enabled

    M16(adr) = *((unsigned short *)buf);        // Program Half Word
    while (FLASH->SR & FLASH_BSY) {
      __nop();                                  // do nothing
    }

    FLASH->CR &= ~FLASH_OPTPG;                  // Option Byte Programming Disabled

    // Check for Errors
    if (FLASH->SR & (FLASH_PGERR | FLASH_WRPRTERR)) {
      FLASH->SR |= FLASH_PGERR | FLASH_WRPRTERR;
      return (1);                               // Failed
    }

    if (adr == (FLASH_OPT_BASE + 0)) {
      // skip reserved option bytes
      adr += 8;
      buf += 8;
      sz  -= 8;
    } else {
      // Go to next Half Word
      adr += 2;
      buf += 2;
      sz  -= 2;
    }
   
  }

  return (0);                                   // Done
}
